--- a/templates/genAI.html
+++ b/templates/genAI.html
@@ -5,7 +5,7 @@
 
 <body>
     <div class="container">
-        <h2>genAI</h2>
+        <h2>More Questions</h2>
         <p>Please enter your question:</p>
         <form action="/genAI_result" method="post">
             <p><input type="text" name="q"></p>
