--- a/templates/genAI_result.html
+++ b/templates/genAI_result.html
@@ -5,8 +5,8 @@
 
 <body>
     <div class="container">
-        <h4>reply {{r}}</h4>
-        <form action="/main" method="post">
+        <h4>Reply {{r}}</h4>
+        <form action="/homepage" method="post">
             <p><input type="submit" value="Main"></p>
         </form>
     </div>
