--- a/templates/stock_info.html
+++ b/templates/stock_info.html
@@ -7,6 +7,11 @@
     <div>
         <h4>Basic Stock Information of {{company_name}}</h4>
         <table>{{stock_info|safe}}</table>
+        {% if img %}
+            <img src="{{img}}">
+        {% else %}
+            <p>Stock trend is not available</p >
+        {% endif %}
         <form action="/info" method="post">
             <p><input type="submit" value="Company Information"></p>
         </form>
