--- a/templates/investment_result.html
+++ b/templates/investment_result.html
@@ -5,7 +5,7 @@
 
 <body>
     <div class="container">
-        <h4>You have successfully invested {{amount}} on {{company_name}}</h4>
+        <h4>You have successfully invested {{amount}} USD on {{company_name}}</h4>
         <p>(= {{quantity}} shares)</p>
         <form action="/homepage" method="post">
             <p><input type="submit" value="Main"></p>
