--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #e1d1d0;
     margin: 0;
     padding: 20px;
     display: flex;
@@ -29,7 +29,7 @@ body {
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 26px;
     margin-bottom: 20px;
     color: #333;
 }
@@ -39,7 +39,7 @@ form {
 }
 
 input[type="submit"] {
-    background-color: #007bff;
+    background-color: #7D1713;
     color: white;
     padding: 12px 24px;
     border: none;
@@ -61,21 +61,21 @@ input, button {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #7D1713;
     color: white;
     border: none;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #3C110F;
 }
 
 
 p {
     margin-top: 20px;
     font-size: 16px;
-    color: #007bff;
+    color: #7D1713;
 }
 
 table {
@@ -88,11 +88,11 @@ table {
 
 th, td {
     padding: 10px 15px;
-    border: 1px solid #ddd;
+    border: 1px solid #7D1713;
 }
 
 th {
-    background-color: #f4f4f4;
+    background-color: #CBB2AB;
 }
 
 
