--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
         <form action="/investment" method="post">
             <p><input type="submit" value="Make Investment"></p>
         </form>
-        <form action="/" method="post">
+        <form action="/" method="get">
             <p><input type="submit" value="End"></p>
         </form>
     </div>
