--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
 
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='fireball-capital-logo-removebg.png') }}" alt="Company Logo" class="logo-img">
+        </div>
         <h2>Fireball Capital</h2>
         <p>Please enter stock code:</p>
         <form action="/" method="post">
