--- a/templates/ms.html
+++ b/templates/ms.html
@@ -25,9 +25,8 @@
         {% endif %}
         {% endif %}
 
-        <!-- 返回按钮 -->
         <div class="back-button">
-            <a href="/homepage" class="btn">Back to Main Function</a >
+            <a href="/main" class="btn">Back to Main Function</a >
         </div>
     </div>
 </body>
