--- a/templates/stock_info.html
+++ b/templates/stock_info.html
@@ -1,16 +1,16 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
     <div>
-        <h4>Basic Stock Information of {{company_name}}</h4>
-        <table>{{stock_info|safe}}</table>
+        <h4>Basic Stock Information of {{ company_name }}</h4>
+        <table>{{ stock_info | safe }}</table>
         {% if img %}
-            <img src="{{img}}">
+            <img src="{{ img }}" class="image-class">
         {% else %}
-            <p>Stock trend is not available</p >
+            <p>Stock trend is not available</p>
         {% endif %}
         <form action="/info" method="post">
             <p><input type="submit" value="Company Information"></p>
