--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Arial', sans-serif;
     background-color: #e1d1d0;
@@ -21,10 +20,10 @@ body {
 }
 
 .image-class {
-    max-width: 100%;  /* Ensures the image scales down responsively */
-    height: auto;     /* Maintains the aspect ratio of the image */
-    border-radius: 8px; /* Optional: Adds rounded corners */
-    margin-bottom: 20px; /* Adds space below the image */
+    max-width: 100%; 
+    height: auto;  
+    border-radius: 8px;
+    margin-bottom: 20px; 
     display: block;
 }
 
