--- a/templates/genAI.html
+++ b/templates/genAI.html
@@ -11,5 +11,8 @@
             <p><input type="text" name="q"></p>
             <p><input type="submit" value="Enter"></p>
         </form>
+        <form action="/homepage" method="post">
+            <p><input type="submit" value="Main"></p>
+        </form>
     </div>
 </body>
