--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -5,7 +5,7 @@
 
 <body>
     <div class="container">
-        <h4>Basic Introduction for: {{company_name}}</h4>
+        <h2>Basic Introduction of {{company_name}}</h2>
         <table>{{company_info|safe}}</table>
         <form action="/info" method="post">
             <p><input type="submit" value="Company Information"></p>
