--- a/templates/ms.html
+++ b/templates/ms.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='ms_styles.css') }}">
-    <title>News Sentiment Analysis</title>
+    <title>Market Sentiment</title>
 </head>
 <body>
     <div class="container">
@@ -25,8 +25,8 @@
         {% endif %}
         {% endif %}
 
-        <div class="back-button">
-            <a href="/main" class="btn">Back to Main Function</a >
-        </div>
+        <form action="/main" method="get">
+            <p><input type="submit" value="Back to Main Function"></p>
+        </form>
     </div>
 </body>
