--- a/templates/financial_info.html
+++ b/templates/financial_info.html
@@ -1,12 +1,14 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='ms_styles.css')}}">
 </head>
 
 <body>
-    <div>
-        <h4>Basic Financial Information of {{company_name}}</h4>
-        <table>{{financial_info|safe}}</table>
+    <div class="container">
+        <h2>Basic Financial Information of {{company_name}}</h2>
+        <div>
+            <table>{{ financial_info|safe }}</table>
+        </div>
         <form action="/info" method="post">
             <p><input type="submit" value="Company Information"></p>
         </form>
