--- a/templates/genAI_result.html
+++ b/templates/genAI_result.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <h4>Reply {{r}}</h4>
-        <form action="/homepage" method="post">
+        <form action="/main" method="get">
             <p><input type="submit" value="Main"></p>
         </form>
     </div>
