--- a/templates/investment.html
+++ b/templates/investment.html
@@ -13,7 +13,7 @@
             <h3>USD</h3>
             <p><input type="submit" value="Confirm"></p>
         </form>
-        <form action="/homepage" method="post">
+        <form action="/main" method="get">
             <p><input type="submit" value="Main"></p>
         </form>
     </div>
