--- a/templates/investment_result.html
+++ b/templates/investment_result.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h4>You have successfully invested {{amount}} USD on {{company_name}}</h4>
         <p>(= {{quantity}} shares)</p>
-        <form action="/homepage" method="post">
+        <form action="/main" method="get">
             <p><input type="submit" value="Main"></p>
         </form>
     </div>
