--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
             <p><input type="submit" value="Market Sentiment"></p>
         </form>
         <form action="/genAI" method="post">
-            <p><input type="submit" value="More Questions"></p>
+            <p><input type="submit" value="GenAI Assistant"></p>
         </form>
         <form action="/investment" method="post">
             <p><input type="submit" value="Make Investment"></p>
