--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,8 @@
             <img src="{{ url_for('static', filename='fireball-capital-logo-removebg.png') }}" alt="Company Logo" class="logo-img">
         </div>
         <h2>Fireball Capital</h2>
-        <p>Please enter stock code:</p>
         <form action="/" method="post">
-            <p><input type="text" name="q" placeholder="Enter Stock Ticker" required></p >
+            <p><input type="text" name="q" placeholder="Please enter the stock code" required></p >
             <p><input type="submit" value="Enter"></p >
         </form>
 
