--- a/templates/info.html
+++ b/templates/info.html
@@ -15,7 +15,7 @@
         <form action="/stock_info" method="post">
             <p><input type="submit" value="Stock Information"></p>
         </form>
-        <form action="/homepage" method="post">
+        <form action="/main" method="get">
             <p><input type="submit" value="Main"></p>
         </form>
     </div>
