--- a/templates/info.html
+++ b/templates/info.html
@@ -5,9 +5,9 @@
 
 <body>
     <div class="container">
-        <h2>Company Information</h2>
+        <h2>{{ company_name }} Information</h2>
         <form action="/introduction" method="post">
-            <p><input type="submit" value="Company Introductioin"></p>
+            <p><input type="submit" value="Company Introduction"></p>
         </form>
         <form action="/financial_info" method="post">
             <p><input type="submit" value="Financial Information"></p>
@@ -16,7 +16,7 @@
             <p><input type="submit" value="Stock Information"></p>
         </form>
         <form action="/main" method="get">
-            <p><input type="submit" value="Main"></p>
+            <p><input type="submit" value="Back to Main"></p>
         </form>
     </div>
 </body>
