--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,12 @@ h2 {
     color: #333;
 }
 
+h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #5f130f;
+}
+
 form {
     margin: 15px 0;
 }
