--- a/static/ms_styles.css
+++ b/static/ms_styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f5f7fa;
+    background-color: #fff;
     margin: 0;
     padding: 20px;
     display: flex;
@@ -11,14 +11,13 @@ body {
 }
 
 .container {
-    background-color: #ffffff;
+    background-color: #f5eeee;
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     max-width: 1100px;
     width: 90%;
     box-sizing: border-box;
-    border: 1px solid #5f130f;
 }
 
 .table-wrapper {
