--- a/templates/genAI.html
+++ b/templates/genAI.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='ms_styles.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='ai_styles.css')}}">
     <title>GenAI Assistant</title>
 </head>
 
